# ovf-data-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: release.yml
docs/: arcgis-drought-layers.md  design.md  index.html  ovf-service-behavior.md  phase-2-review.md
docs/examples/: danube-flood-wave.html  danube-in-balatons.html  danube-water-level.html  homokhatsag-groundwater.html  hungary-deep-groundwater-pulse.html  lake-velence-90-years.html  rivers-drought-scoreboard.html  varosfold-soil-drought.html
openapi/: vraquery-v1.0.0.json
scripts/: generate-vra-models  release
src/vizugy/: __init__.py  cli.py  errors.py  factory.py  mcp_server.py  models.py  providers.py  retry.py  service.py  upstream.py  vra_provider.py
src/vizugy/_generated/: __init__.py  vra_models.py
tests/: test_investigation.py  test_mcp.py  test_service.py  test_vra_provider.py
tests/fixtures/: layer.json  services.json  vir.json
