[project]
name = "vizugy-mcp"
version = "0.1.0"
description = "Agent-friendly access to public Hungarian water-management datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.10,<3",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
mcp = ["mcp>=1.28,<2"]
test = ["pytest>=8,<9", "pytest-asyncio>=0.25,<2"]

[project.scripts]
vizugy = "vizugy.cli:app"
vizugy-mcp = "vizugy.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vizugy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "prek>=0.4.10",
    "ruff>=0.15.22",
    "ty>=0.0.60",
]
