[project]
name = "ovf-data-mcp"
version = "0.1.5"
description = "Agent-friendly access to public Hungarian water-management datasets"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["hungary", "hydrology", "mcp", "ovf", "water-data"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.28,<2",
  "pydantic>=2.10,<3",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9", "pytest-asyncio>=0.25,<2", "respx>=0.23,<1"]

[project.scripts]
vizugy = "vizugy.cli:app"
ovf-data-mcp = "vizugy.mcp_server:main"

[project.urls]
Documentation = "https://github.com/kalcifield/ovf-data-mcp#readme"
Issues = "https://github.com/kalcifield/ovf-data-mcp/issues"
Repository = "https://github.com/kalcifield/ovf-data-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vizugy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "datamodel-code-generator==0.57.0",
    "mypy>=2.3,<3",
    "prek>=0.4.10",
    "ruff>=0.15.22",
]
